src/App.css
@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=GFS+Didot&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
@import "tailwindcss";

.wood-texture {
  background: url('/wood-grain.svg') center top / 400px 800px repeat;
  background-attachment: fixed;
}

@layer ultilities {
  .hamburger-toggle {
    @apply [&>div]:h-0 [&>div]:bg-white [&>div]:before:translate-y-0 [&>div]:before:rotate-45 [&>div]:after:translate-y-0 [&>div]:after:-rotate-45;
  }

  .insta-icon {
    fill: black;
    transition: fill 0.3s ease;
  }
  a:hover .insta-icon {
    fill: url(#instaGrad);
  }

  .rednote-icon {
    fill: black;
    transition: fill 0.3s ease;
  }
  a:hover .rednote-icon {
    fill: #ff2842;
  }
}

@theme {
  --font-didot: "GFS Didot", serif;
  --font-cormorant: "Cormorant Garamond", serif;
  --font-playfair: "Playfair Display", serif;

  --color-wood-bg: #1C1210;
  --color-wood-primary: #4A2E1F;
  --color-wood-accent: #6B432E;
  --color-wood-dark: #3A2015;
  --color-wood-text: #FFEDE8;
  --color-wood-light: #e3ddcf;

  --animate-bg-intro: fadeIn 1s ease-out forwards, slideDown 1s ease-in 4s forwards;
  --animate-shape-intro: shapeIn 1.5s cubic-bezier(0.16, 1, 0.3, 1) forwards;
  --animate-text-intro: textIn 3s cubic-bezier(0.16, 1, 0.3, 1) forwards;
  --animate-fade-in: fadeIn 0.5s ease-in forwards;

  @keyframes textIn {
    0%   { opacity: 0; transform: translateY(100px); }
    100% { opacity: 1; transform: translateY(0); }
  }

  @keyframes fadeIn {
    0%   { opacity: 0; }
    100% { opacity: 1; }
  }

  @keyframes shapeIn {
    0%   { opacity: 0; transform: translateY(30px); }
    100% { opacity: 0.85; transform: translateY(0); }
  }

  @keyframes slideDown {
    0%   { opacity: 1; transform: translateY(0); }
    100% { opacity: 0; transform: translateY(60px); }
  }
}

